Redirect for certain logins
Privacy Policy
Client side application insights added
SEO fixes

--- a/SailScores.Web/Views/ClubRequest/Index.cshtml
+++ b/SailScores.Web/Views/ClubRequest/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "SailScores Sign-up";
+    ViewData["MetaDescription"] = "Request the creation of a new club hosted at SailScores";
 }
 
 <h1>Give it a try. It's free.</h1>
