--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -46,8 +46,9 @@
     like to share.
 </p>
 <p>
-    By the way, SailScores doesn't use any tracking or cookies except the minimum required to
-    track logged-in users. Your data is not being sold by SailScores.
+    By the way, SailScores doesn't share any tracking or cookies with third-parties. Your
+    data is not being sold by SailScores. See our thorough
+    <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a> for more information.
 </p>
 <br />
 <h3>Future</h3>
