--- a/SailScores.Web/Views/Shared/_ClubLayout.cshtml
+++ b/SailScores.Web/Views/Shared/_ClubLayout.cshtml
@@ -27,7 +27,7 @@
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="msapplication-TileImage" content="~/images/favicon/mstile-144x144.png">
     <meta name="color-scheme" content="light dark">
-    
+
     <title>@ViewData["Title"]</title>
     @if (!String.IsNullOrWhiteSpace((String)ViewData["MetaDescription"]))
     {
@@ -38,19 +38,20 @@
         <meta name="keywords" content="@ViewData["MetaKeywords"]" />
     }
 
-<environment include="Development">
-    <link rel="stylesheet" href="~/css/custom.css" />
-    <link rel="stylesheet" href="~/vendor/bootstrap-select/css/bootstrap-select.css">
-</environment>
+    <environment include="Development">
+        <link rel="stylesheet" href="~/css/custom.css" />
+        <link rel="stylesheet" href="~/vendor/bootstrap-select/css/bootstrap-select.css">
+    </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.7/dist/css/bootstrap-select.min.css">
     </environment>
     <noscript>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="~/css/weather-icons.min.css"/>
-        <link rel="stylesheet" type="text/css" href="~/css/weather-icons-wind.min.css"/>
+        <link rel="stylesheet" type="text/css" href="~/css/weather-icons.min.css" />
+        <link rel="stylesheet" type="text/css" href="~/css/weather-icons-wind.min.css" />
     </noscript>
+    @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body>
     <header class="navbar navbar-expand-md navbar-dark bg-dark">
