--- a/SailScores.Web/Views/_ViewImports.cshtml
+++ b/SailScores.Web/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using SailScores.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SailScores.Web
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
