--- a/SailScores.Web/Views/Admin/_CompetitorList.cshtml
+++ b/SailScores.Web/Views/Admin/_CompetitorList.cshtml
@@ -9,38 +9,12 @@
         </h5>
     </div>
     <div id="collapseCompetitors" class="collapse" aria-labelledby="competitorsHeading" data-parent="#accordion">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-sm-6">
-                    <a class="btn btn-primary" asp-action="CreateMultiple" asp-controller="Competitor">
-                        Create
-                    </a>
-                </div>
-                <div class="col-sm-3">
-                    <a class="btn btn-warning" asp-action="Options" asp-controller="MergeCompetitor">
-                        Merge Competitors
-                    </a>
-                </div>
-            </div>
-            @foreach (var item in Model.OrderBy(c => c.Name))
-            {
-        <div class="row border-bottom mb-1 pb-1">
-            <div class="col-3 col-sm-2"><strong>@Html.DisplayFor(modelItem => item.SailNumber)</strong></div>
-            <div class="col-9 col-sm-4 col-md-4 col-lg-3">@Html.DisplayFor(modelItem => item.Name)</div>
-            <div class="col-4 col-sm-3 col-md-3 col-lg-2"><em>@Html.DisplayFor(modelItem => item.BoatName)</em></div>
-            <div class="col-4 col-md-2 small">
-                <em>@(item.IsActive ? "" : "Inactive")</em>
-                @Html.DisplayFor(modelItem => item.BoatClass.Name)
-            </div>
-            <div class="col-12 col-md-6 col-lg-3 col-xl-3">
-                @Html.ActionLink("Edit", "Edit", "Competitor", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", "Competitor", new { id = item.Id })
-                    </div>
-            <div class="col-12">
-                @Html.DisplayFor(modelItem => item.Notes)
-            </div>
-        </div>
-            }
+        <div class="card-body p-1 p-md-20">
+            <p>
+                Competitor changes can be completed on the
+                <a asp-controller="competitor"
+                   asp-action="index">competitor page</a>.
+            </p>
         </div>
     </div>
 </div>
