--- a/SailScores.Web/Views/Competitor/Index.cshtml
+++ b/SailScores.Web/Views/Competitor/Index.cshtml
@@ -6,7 +6,7 @@
 @inject IStringLocalizer<SharedResource> localizer
 @inject AppSettingsService settingsService
 
-@model ClubCollectionViewModel<CompetitorViewModel>
+@model ClubCollectionViewModel<SailScores.Core.Model.Competitor>
 
 @{
     ViewBag.Title = Model.ClubInitials + " " + localizer["Competitors"];
@@ -18,15 +18,58 @@
             <h1>@Model.ClubInitials @localizer["Competitors"]</h1>
         </div>
     </div>
-    @foreach (var competitor in Model.List)
+    <div class="row">
+        <div class="col-sm-3">
+            <a class="btn btn-primary" asp-action="CreateMultiple" asp-controller="Competitor">
+                Create
+            </a>
+        </div>
+        <div class="col-sm-3">
+            <a class="btn btn-warning" asp-action="Options" asp-controller="MergeCompetitor">
+                Merge Competitors
+            </a>
+        </div>
+        <div class="col-sm-3">
+            <a class="btn btn-outline-primary" asp-action="Index" asp-controller="Admin">
+                Club Admin
+            </a>
+        </div>
+    </div>
+    @foreach (var item in Model.List.OrderBy(c => c.Name).ThenBy(c => c.SailNumber))
     {
-        <div class="row">
-            <div class="col-12">
-                <h2><a asp-route="Competitor"
-                       asp-route-clubInitials="@Model.ClubInitials"
-                       asp-route-sailNumber="@competitor.SailNumber"
-                       >@competitor.Name</a></h2>
+    <div class="row border-bottom mb-1 pb-1">
+        <div class="col-3 col-sm-2 col-lg-1">
+            <a asp-route="Competitor"
+               asp-route-clubInitials="@Model.ClubInitials"
+               asp-route-sailNumber="@item.SailNumber">
+                <strong>@Html.DisplayFor(modelItem => item.SailNumber)</strong>
+            </a>
+        </div>
+        <div class="col-9 col-sm-4 col-md-4 col-lg-3">@Html.DisplayFor(modelItem => item.Name)</div>
+        <div class="col-6 col-sm-3 col-md-4 col-lg-2"><em>@Html.DisplayFor(modelItem => item.BoatName)</em></div>
+        <div class="col-6 col-md-2 small">
+            <em>@(item.IsActive ? "" : "Inactive")</em>
+            @Html.DisplayFor(modelItem => item.BoatClass.Name)
+        </div>
+        <div class="col-12 col-lg-3">
+            <div class="float-right">
+                @if (Model.CanEdit)
+                {
+                    <a asp-action="Edit"
+                       asp-controller="Competitor"
+                       asp-route-id=@item.Id
+                       class="text-primary">Edit</a>
+                    @("|")
+                    <a asp-action="Delete"
+                       asp-controller="Competitor"
+                       asp-route-id=@item.Id
+                       class="text-danger">Delete</a>
+                }
             </div>
         </div>
+        <div class="col-12">
+            @Html.DisplayFor(modelItem => item.Notes)
+        </div>
+    </div>
     }
 </div>
