--- a/SailScores.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SailScores.Web/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,6 @@
 @using SailScores.Web.Services;
 
 @inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
 @inject AppSettingsService settingsService
 
 @inject IStringLocalizer<SharedResource> localizer
@@ -17,7 +16,7 @@
         ? $"{user.FirstName} {user.LastName}"
         : user.Email;
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="float-right">
-        <a class="btn btn-link float-right" href="/Identity/Account/Manage/ChangePassword" title="Change Password">@displayName</a><br />
+        <a class="btn btn-link float-right" href="/Identity/Account/Manage/UpdateProfile" title="Update User Info">@displayName</a><br />
         <button type="submit" class="btn btn-link float-right">@localizer["Log out"]</button>
     </form>
 }
