--- a/SailScores.Web/Views/_ViewImports.cshtml
+++ b/SailScores.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,14 @@
 ﻿@using SailScores.Web
 @using SailScores.Web.Models
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.Extensions.Localization
+@using SailScores.Identity.Entities
+@using SailScores.Web.Resources;
+@using SailScores.Web.Services;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, SailScores.Web
 @inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+@inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject AppSettingsService settingsService
